fix Bug #74716: TFS:48730 - The pattern of Day off on the shift trade request detail panel is too light , a liitle bit hard to see clearly

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_requests.scss
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_requests.scss
@@ -67,6 +67,7 @@ wfm-multiple-search-input {
 			height: 1.32em;
 			z-index: 11;
 			transform: translateX(-50%);
+			bottom: 0;
 		}
 	}
 
@@ -436,12 +437,6 @@ wfm-multiple-search-input {
 		.ui-grid-pinned-container-left .ui-grid-header-viewport,
 		.ui-grid-pinned-container-right .ui-grid-header-viewport {
 			overflow: visible;
-		}
-
-		.dayoff {
-			height: 22px;
-			background-size: 11px 11px;
-			background-image: linear-gradient(135deg, transparent, transparent 7px, rgba(0,0,0,0.2) 8px, transparent 8px, transparent );
 		}
 	}
 
