--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_teamschedule.scss
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_teamschedule.scss
@@ -180,16 +180,6 @@
 		background-image: linear-gradient(45deg, transparent, transparent 4px, rgba(0, 0, 0, .5) 6px, transparent 10px, transparent);
 	}
 
-	.dayoff {
-		text-align: center;
-		top: -5px;
-		height: 30px;
-		padding: 7px;
-		color: inherit !important;
-		background-size: 11px 11px;
-		background-image: linear-gradient(135deg, transparent, transparent 7px, rgba(209, 209, 209, 0.7) 8px, transparent 8px, transparent);
-	}
-
 	.uib-timepicker {
 		height: 48px;
 
@@ -276,6 +266,19 @@
 		}
 	}
 }
+
+//Day off style
+.dayoff {
+	text-align: center;
+	height: 22px;
+	color: inherit !important;
+	background-size: 11px 11px;
+	background-image: linear-gradient(135deg, transparent, transparent 7px, rgba(0, 0, 0, .5) 8px, transparent 8px, transparent);
+	background-color: beige;
+	border-radius: 4px;
+	border-left: 1px solid $white;
+}
+
 //Header
 .teamschedule-header {
 	padding: .8em .5em .2em .5em;
